--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
 		"@cornerstonejs/core": "^1.2.8",
 		"@cornerstonejs/dicom-image-loader": "^1.4.1",
 		"@cornerstonejs/tools": "^1.2.8",
-		"@fnndsc/chrisapi": "^1.14.3",	
+		"@fnndsc/chrisapi": "^1.14.3",
 		"@tailwindcss/forms": "^0.5.3",
 		"bits-ui": "^0.0.32",
 		"class-variance-authority": "^0.6.0",
 		"clsx": "^2.0.0",
+		"cookie": "^0.5.0",
 		"cornerstone-file-image-loader": "^0.3.0",
 		"cornerstone-math": "^0.1.10",
 		"cornerstone-nifti-image-loader": "^1.0.0",
