--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"cornerstone-tools": "^6.0.9",
 		"cornerstone-wado-image-loader": "^4.13.2",
 		"dicom-parser": "^1.8.21",
+		"dotenv": "^16.3.1",
 		"hammerjs": "^2.0.8",
 		"lucide-svelte": "^0.260.0",
 		"radix-icons-svelte": "^1.2.1",
