Add iframes for OHIF intergrations with the pacs

--- a/.env.template
+++ b/.env.template
@@ -9,4 +9,5 @@ PUBLIC_AUTH_URL='http://{{CUBE_IP}}:{{CUBE_PORT}}/api/v1/auth-token/'
 
 
 PUBLIC_OHIF_URL='http://{{OHIF_IP}}:{{OHIF_PORT}}/' 
-
+PUBLIC_BCHPACS_URL='http://{{BCHPACS_IP}}:{{BCHPACS_PORT}/'
+PUBLIC_CHRISPACS_URL='http://{ChRISPACS_IP}:{{ChRISPACS_PORT}}/'
