--- a/package.json
+++ b/package.json
@@ -51,15 +51,16 @@
 		"cornerstone-nifti-image-loader": "^1.0.0",
 		"dicom-parser": "^1.8.21",
 		"dotenv": "^16.3.1",
+		"formsnap": "^0.1.4",
 		"hammerjs": "^2.0.8",
 		"lucide-svelte": "^0.260.0",
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-headlessui": "^0.0.15",
 		"svelte-transition": "^0.0.7",
-		"sveltekit-superforms": "^1.0.0-rc.1",
+		"sveltekit-superforms": "^1.8.0",
 		"tailwind-merge": "^1.14.0",
 		"tailwind-variants": "^0.1.13",
 		"tailwindcss-animate": "^1.0.6",
-		"zod": "^3.21.4"
+		"zod": "^3.22.4"
 	}
 }
