Update Notifications Panel

--- a/.env
+++ b/.env
@@ -13,4 +13,4 @@ PUBLIC_OHIF_URL='https://viewer.ohif.org/'
 PUBLIC_BCHPACS_URL='http://rc-golden.tch.harvard.edu:30038/'
 PUBLIC_CHRISPACS_URL='http://rc-golden.tch.harvard.edu:30038/'
 
-
+PUBLIC_EXPORT_PATH='/home/gideonp/ohif'
